Calendar: fix animation
When making the year panel visible, the right side got invisible. This
happend since the jquery 3 upgrade.

Solution: Add white-space: nowrap to make sure the right panel never moves to bottom.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/calendar/Calendar.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/calendar/Calendar.less
@@ -29,6 +29,7 @@
   width: 100%;
   height: 100%;
   min-height: 400px;
+  white-space: nowrap;
 }
 
 .calendar-header {
